<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OrderCoffeeRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAB91"
    tools:context=".OrderCoffeeFragment">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEditText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/toppingLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/toppingLabel"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/whippedCreamCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toppingLabelTextView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="0dp"
        android:text="@string/whippedCream"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/chocolateCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/whippedCreamCheckBox"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="0dp"
        android:text="@string/chocolate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/quantityLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chocolateCheckBox"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/quantityLabel"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/quantityLabelTextView"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/minusButton"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/quantityNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantityLabelTextView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@id/minusButton"
        android:text="@string/initial_coffee_quantity"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/quantityLabelTextView"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/quantityNumberTextView"
        android:text="@string/plusButton"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/orderButton"
        style="@android:style/Widget.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="150dp"
        android:text="@string/orderBtn"
        android:textAllCaps="true"
        android:textStyle="bold" />

</RelativeLayout>