<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeFragmentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF59D"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcomeText"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/orderCoffeeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/orderCoffeeBtn"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#673AB7"
            android:text="@string/order_coffee"
            android:textAllCaps="true"
            android:textColor="#3D5AFE"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/funBoxesBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

        <Button
            android:id="@+id/funBoxesBtn"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funBoxesBtn"
            android:textAllCaps="true"
            android:textColor="#006064"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/quakeReportBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderCoffeeBtn" />

        <Button
            android:id="@+id/quakeReportBtn"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quakeReportBtn"
            android:textAllCaps="true"
            android:textColor="#D81B60"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/funBoxesBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>